--- a/Happy Birthday_files/style.css
+++ b/Happy Birthday_files/style.css
@@ -1,4 +1,10 @@
 /* customizable snowflake styling */
+.snowflake {
+    position: fixed !important;
+    z-index: 9999999 !important;
+    pointer-events: none;
+}
+
 .loader button {
     width: 50%;
     height: 100px;
@@ -86,11 +92,10 @@ img {
 }
 
 #confetti {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
+    position: fixed;
+    inset: 0;
+    z-index: 10;   
+    pointer-events: none;
 }
 
 @keyframes spin {
